--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ nav a {
 }
 
 .jumbotron {
-  height: 50vh;
+  height: auto;
   padding: 5em inherit;
   margin-bottom: 0;
   background-color: #53C0FB;
