--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ nav a {
   background-color: #53C0FB;
   background: url('../img/cover_back.png');
   background-size: cover;
-  background-position: center;
+  /*background-position: center;*/
   background-repeat: no-repeat;
   color: black;
   font-weight: bold;
