--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ a.custom-card:hover {
 }
 
 #usuario a{
-  color: #fff;
+  color: black;
   margin: auto;
 }
 .categ {
@@ -212,4 +212,61 @@ a.custom-card:hover {
 }
 .categ.p-4 {
   padding: 3rem!important;
+}
+.prod{
+  background-color: grey;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-blend-mode: multiply;
+  background-size: cover;
+  height: 200px;
+}
+
+#carrusel{
+
+  object-position:100%0;
+  width:300px;
+  height:337px;
+
+
+  background-color: grey;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-blend-mode: multiply;
+  background-size: cover;
+  height: 300px;
+}
+
+imgc.{
+  max-width:100%;
+max-height:100%;
+
+}
+.carru {
+  width: 200px;
+  height: 350px;
+  position: relative;
+}
+.carru > .crop {
+  position:absolute;
+  left: -100%;
+  right: -100%;
+  top: -100%;
+  bottom: -100%;
+  margin: auto;
+  min-height: 100%;
+  min-width: 100%;
+}
+
+.fas {
+color: #fff;
+}
+
+#log {
+  background: url(../img/login.png);
+  background-color: grey;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-blend-mode: multiply;
+  background-size: cover;
 }
